--- a/programs.cfg
+++ b/programs.cfg
@@ -1,7 +1,7 @@
 {
 	["pick"] = {
 		files = {
-			["master/pick.lua"] = "/pick",
+			[":master"] = "/pick",
 		},
 		name = "Pick",
 		description = "",
