Updated configuration II

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,12 +1,12 @@
 {
-	["pick"] = {
+	["Pick"] = {
 		files = {
-			[":master"] = "/pick",
+			["master"] = "/pick",
 		},
 		name = "Pick",
 		description = "",
 		authors = "JBL",
 		note = "Additional installation instructions, general instructions and additional information/notes go here, this is an optional line.",
-		hidden = true,
+		hidden = false,
 	},
 }
