--- a/programs.cfg
+++ b/programs.cfg
@@ -7,6 +7,7 @@
 		description = "",
 		authors = "JBL",
 		note = "Additional installation instructions, general instructions and additional information/notes go here, this is an optional line.",
+		repo = "tree/master"
 		hidden = false,
 	},
 }
