Reconfigured config II

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,13 +1,13 @@
 {
 	["Pick"] = {
 		files = {
-			["master/pick.lua"] = "/",
+			[":master/boot/pick.lua"] = "/",
 		},
 		name = "Pick",
 		description = "",
 		authors = "JBL",
 		note = "Additional installation instructions, general instructions and additional information/notes go here, this is an optional line.",
-		repo = "tree/master"
+		repo = "tree/master/pick"
 		hidden = false,
 	},
 }
