Reconfigured config III

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,5 +1,5 @@
 {
-	["Pick"] = {
+	["pick"] = {
 		files = {
 			[":master/boot/pick.lua"] = "/",
 		},
@@ -7,7 +7,6 @@
 		description = "",
 		authors = "JBL",
 		note = "Additional installation instructions, general instructions and additional information/notes go here, this is an optional line.",
-		repo = "tree/master/pick"
-		hidden = false,
+		repo = "tree/master/pick",
 	},
 }
