Reconfigured config IV

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,12 +1,13 @@
-{
-	["pick"] = {
-		files = {
-			[":master/boot/pick.lua"] = "/",
-		},
-		name = "Pick",
-		description = "",
+{	
+	["pick-net"] = {
+		name = "Pick NET",
+		description = "No description",
 		authors = "JBL",
-		note = "Additional installation instructions, general instructions and additional information/notes go here, this is an optional line.",
-		repo = "tree/master/pick",
+		note = "",
+		repo = "tree/master/boot",
+		
+		files = {
+			[":master/boot"] = "/",
+		},
 	},
 }
