--- a/programs.cfg
+++ b/programs.cfg
@@ -1,13 +1,14 @@
 {	
-	["pick-net"] = {
-		name = "Pick NET",
-		description = "No description",
+	["dotNet"] = {
+		name = ".Net",
+		description = "Network",
 		authors = "JBL",
 		note = "",
-		repo = "tree/master/boot",
+		repo = "tree/master",
 		
 		files = {
-			[":master/boot"] = "/",
+			[":master"] = "/",
+			[":master/libs"] = "/libs",
 		},
 	},
 }
