Updated repository settings

--- a/programs.cfg
+++ b/programs.cfg
@@ -4,7 +4,7 @@
 		description = "Network",
 		authors = "JBL",
 		note = "",
-		repo = "tree/master",
+		repo = "tree/master/dotNet",
 		
 		files = {
 			[":master"] = "/",
