--- a/programs.cfg
+++ b/programs.cfg
@@ -4,11 +4,11 @@
 		description = "Network",
 		authors = "JBL",
 		note = "",
-		repo = "tree/master/src",
+		repo = "tree/master/dotNet",
 		
 		files = {
-			[":master/src"] = "/",
-			[":master/src/libs"] = "/libs",
+			["master/dotNet/boot.lua"] = "/",
+			["master/dotNet/libs/netApi.lua"] = "/libs",
 		},
 	},
 }
