--- a/programs.cfg
+++ b/programs.cfg
@@ -1,14 +1,12 @@
-{	
+{
 	["dotNet"] = {
-		name = ".Net",
-		description = "Network",
-		authors = "JBL",
-		note = "",
-		repo = "tree/master/dotNet",
-		
-		files = {
-			["master/dotNet/boot.lua"] = "/",
-			["master/dotNet/libs/netApi.lua"] = "/libs",
-		},
-	},
+        ["files"] = {
+            ["master/dotNet/boot.lua"] = "/bin",
+            ["master/dotNet/libs/netApi.lua"] = "/bin/libs"
+        },
+        ["repo"] = "tree/master/dotNet",
+        ["name"] = ".Net",
+        ["description"] = "Network",
+        ["authors"] = "JBL"
+	}
 }
