--- a/programs.cfg
+++ b/programs.cfg
@@ -6,6 +6,7 @@
         },
         ["repo"] = "tree/master/dotNet",
         ["name"] = ".Net",
+		["note"] = "About",
         ["description"] = "Network",
         ["authors"] = "JBL"
 	}
